@@ -1,2 +1,3 @@
 1. finite difference J and fvv for cholesky solver
 2. Fix biggs test x0 and dogleg / ddogleg convergence issue
+3. add subspaced2D to multilarge example output in docs
